# casino

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: base_collection.py  casino.py  casino_balance.py  chip.py  chip_collection.py  goose.py  goose_collection.py  main.py  player.py  player_collection.py  simulation.py
tests/: test_casino.py  test_chip.py  test_collections.py  test_goose.py  test_player.py
